framec_tests/language_specific/typescript/v3_cli_project/negative/bad_project/project.frm
@target typescript
// Anchor for negative project: unresolved state across modules

